@@ -584,7 +584,7 @@ event_operator_events (EventOperator *root,
 
 		nih_assert (oper->event != NULL);
 
-		NIH_MUST (blocked = blocked_new (parent, BLOCKED_EVENT,
+		blocked = NIH_MUST (blocked_new (parent, BLOCKED_EVENT,
 						 oper->event));
 		nih_list_add (list, &blocked->entry);
 
