@@ -1,5 +1,17 @@
 2009-02-20  Scott James Remnant  <scott@netsplit.com>
 
+	* init/event.c (event_init, event_pending_handle_jobs, event_finished),
+	* init/event_operator.c (event_operator_events),
+	* init/job.c (job_emit_event, job_name),
+	* init/job_class.c (job_class_init, job_class_start)
+	(job_class_stop, job_class_restart),
+	* init/job_process.c (job_process_run, job_process_error_read)
+	(job_process_kill),
+	* init/conf.c (conf_init, conf_source_reload_file)
+	(conf_reload_path),
+	* init/control.c (control_init, control_server_connect)
+	(control_bus_open): Set variable outside of NIH_MUST macro.
+
 	* init/event.c (event_pending_handle_jobs): Set variable outside
 	of NIH_SHOULD macro.
 
